# ring-buffer-cpp

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  README.md  flake.nix
include/: ringbuffer.hpp
notes/: lessons_learned.md  ring_buffer_reading.md
src/: main.cpp
tests/: main_test.cpp
